--- a/styls.css
+++ b/styls.css
@@ -1,5 +1,76 @@
 html,body
 {
-	font-family: Century Gothic;
+	
 	background-image: url('https://butovskiy.github.io/First-website/img/2.1.jpg');
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	font-size: 15px;
+	font-family: Century Gothic;
 }
+
+
+header
+{
+	width: 100%;
+	height: 120px;
+	margin: 0 auto;
+	margin-bottom: 40px;
+	/*padding-top: 10px;*/
+	background-color: white;
+	box-shadow: 0px 0px 15px rgba(0,0,0,0.6);
+
+}
+
+.cap
+{
+	/*background-color: blue;*/
+	margin: 0 auto;
+	width: 960px;
+	height: 100px;
+}
+
+.logo
+{
+	float: left;
+	width: 120px;
+	height: 120px;
+	/*background-color: red;*/
+}
+
+#name-header
+{
+	font-size: 20px;
+	padding-top: 50px;
+	/*margin-top: 40px;*/
+	/*background-color: red;*/
+
+}
+
+nav a
+{
+	margin-right: 40px;
+}
+
+.content
+{
+	margin: 0 auto;
+	width: 960px;
+}
+
+.form
+{
+	margin: 0 auto;
+	width: 960px;
+}
+
+footer
+{
+	margin-top: 20px;
+	background-color: white;
+	padding-left: 20px;
+	height: 60px;
+	padding-top: 50px;
+	box-shadow: 0px 0px 15px rgba(0,0,0,0.6);
+}
+
