--- a/styls.css
+++ b/styls.css
@@ -40,6 +40,8 @@ header
 
 #name-header
 {
+	color: gray;
+	font-weight: bold;
 	font-size: 20px;
 	padding-top: 50px;
 	/*margin-top: 40px;*/
@@ -47,9 +49,30 @@ header
 
 }
 
+nav
+{
+	font-weight: bold;
+	display: block;
+	width: 960px;
+	text-align: center;
+	margin: auto;
+	margin-bottom: 30px;
+}
+
 nav a
 {
-	margin-right: 40px;
+	color: gray;
+	margin-right: 25px;
+	margin-left: 25px;
+	text-decoration: none;
+}
+
+nav a:hover
+{
+	color: #f2683a;
+	margin-right: 25px;
+	margin-left: 25px;
+	text-decoration: none;
 }
 
 .content
@@ -58,10 +81,43 @@ nav a
 	width: 960px;
 }
 
+.tab
+{
+	width: 960px;
+	margin: 0 auto;
+}
+
+table
+{
+	padding: 15px;
+	box-shadow: 0px 0px 15px rgba(0,0,0,0.6);
+	margin: 0 auto;
+	margin-bottom: 30px;
+}
+
+
+
+td 
+{
+	padding: 10px;
+}
+
+}
 .form
 {
 	margin: 0 auto;
 	width: 960px;
+}
+
+form
+{
+	margin: 0 auto;
+	padding-left: 35px;
+	padding-right: 35px;
+	padding-bottom: 35px;
+	padding-top: 10px;
+	width: 300px;
+	box-shadow: 0px 0px 15px rgba(0,0,0,0.6);
 }
 
 footer
@@ -74,3 +130,45 @@ footer
 	box-shadow: 0px 0px 15px rgba(0,0,0,0.6);
 }
 
+input
+{
+	font-family: Century Gothic;
+	background-color: transparent;
+	border: 2px solid transparent;
+}
+
+input:hover
+{
+	font-family: Century Gothic;
+	background-color: transparent;
+	border: 2px solid #f2683a;
+}
+select
+{
+	font-family: Century Gothic;
+	background-color: transparent;
+	border: 2px solid gray;
+}
+
+textarea
+{
+	font-family: Century Gothic;
+	background-color: transparent;
+	border: 2px solid gray;
+}
+
+#bot 
+{
+	margin-top: 10px;
+	font-family: Century Gothic;
+	background-color: transparent;
+	border: 2px solid gray;
+}
+
+#bot:hover
+{
+	margin-top: 10px;
+	font-family: Century Gothic;
+	background-color: transparent;
+	border: 2px solid #f2683a;
+}
