--- a/styls.css
+++ b/styls.css
@@ -81,6 +81,17 @@ nav a:hover
 	width: 960px;
 }
 
+a 
+{
+	text-decoration: none;
+}
+
+a:hover
+{
+	text-decoration: none;
+	color: #f2683a;
+}
+
 .tab
 {
 	width: 960px;
@@ -89,13 +100,12 @@ nav a:hover
 
 table
 {
+	color: gray;
 	padding: 15px;
 	box-shadow: 0px 0px 15px rgba(0,0,0,0.6);
 	margin: 0 auto;
 	margin-bottom: 30px;
 }
-
-
 
 td 
 {
@@ -111,6 +121,7 @@ td
 
 form
 {
+	color: gray;
 	margin: 0 auto;
 	padding-left: 35px;
 	padding-right: 35px;
@@ -171,4 +182,10 @@ textarea
 	font-family: Century Gothic;
 	background-color: transparent;
 	border: 2px solid #f2683a;
+}
+
+footer
+{
+	color: gray;
+	font-weight: bold;
 }
