--- a/styls.css
+++ b/styls.css
@@ -62,17 +62,19 @@ nav
 nav a
 {
 	color: gray;
-	margin-right: 25px;
-	margin-left: 25px;
+	margin-right: 50px;
+	margin-left: 50px;
 	text-decoration: none;
 }
 
 nav a:hover
 {
 	color: #f2683a;
-	margin-right: 25px;
-	margin-left: 25px;
-	text-decoration: none;
+	margin-right: 50px;
+	margin-left: 50px;
+	padding-bottom: 2px;
+	border-bottom: 2px solid #f2683a;
+	/*text-decoration: none;*/
 }
 
 .content
@@ -84,6 +86,7 @@ nav a:hover
 a 
 {
 	text-decoration: none;
+	color: ;
 }
 
 a:hover
@@ -133,7 +136,7 @@ form
 
 footer
 {
-	margin-top: 20px;
+	margin-top: 50px;
 	background-color: white;
 	padding-left: 20px;
 	height: 60px;
@@ -156,20 +159,24 @@ input:hover
 }
 select
 {
+	padding: 10px;
 	font-family: Century Gothic;
 	background-color: transparent;
-	border: 2px solid gray;
+	border: 2px solid transparent;
+	height: 80px;
 }
 
 textarea
 {
+	padding: 10px;
 	font-family: Century Gothic;
 	background-color: transparent;
-	border: 2px solid gray;
+	border: 2px solid transparent;
 }
 
 #bot 
 {
+	color: gray;
 	margin-top: 10px;
 	font-family: Century Gothic;
 	background-color: transparent;
@@ -178,6 +185,7 @@ textarea
 
 #bot:hover
 {
+	color: #f2683a;
 	margin-top: 10px;
 	font-family: Century Gothic;
 	background-color: transparent;
