--- a/styls.css
+++ b/styls.css
@@ -81,6 +81,7 @@ nav a:hover
 {
 	margin: 0 auto;
 	width: 960px;
+	font-size: 15px;
 }
 
 
@@ -194,6 +195,7 @@ textarea
 
 footer
 {
+	padding-left: 50px;
 	color: gray;
 	font-weight: bold;
 }
